@@ -6,9 +6,10 @@ Copyright (C) 2007 by Jean Bréfort
 This file is part of the Open Babel project.
 For more information, see <http://openbabel.sourceforge.net/>
  
-This program is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation version 2 of the License.
+This program is free software; you can redistribute it and/or 
+modify it under the terms of the GNU General Public License as 
+published by the Free Software Foundation; either version 2 of the
+License, or (at your option) any later version.
  
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -25,6 +26,7 @@ GNU General Public License for more details.
 #include <set>
 #include <vector>
 #include <cstdarg>
+#include <cstdlib>
 
 using namespace std;
 
